<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">PirateSeas</string>
    <string name="game_title">PIRATE SEAS</string>
    <string name="permissions_error">Permissions needed to play the game</string>
    <string name="activity_new_game">New Game</string>
    <string name="activity_tutorial">Tutorial</string>
    <string name="activity_load_game">Load Game</string>
    <string name="activity_settings">Settings</string>
    <string name="activity_help">Help</string>
    <string name="btn_accept">Accept</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_close">Close</string>
    <string name="exception_gold">Not enough gold to purchase that!</string>
    <string name="exception_ammo">Not enough ammunition to shoot!</string>
    <string name="exception_reloading">Reloading cannons!</string>
    <string name="exception_save">Error while saving</string>
    <string name="sensor_accelerometer">Accelerometer</string>
    <string name="sensor_magnetic_field">Magnetic field</string>
    <string name="sensor_orientation">Orientation</string>
    <string name="sensor_gyroscope">Gyroscope</string>
    <string name="sensor_light">Light</string>
    <string name="sensor_pressure">Pressure</string>
    <string name="sensor_temperature">Temperature</string>
    <string name="sensor_proximity">Proximity</string>
    <string name="sensor_gravity">Gravity</string>
    <string name="sensor_linear_acceleration">Linear acceleration</string>
    <string name="sensor_rotation_vector">Rotation vector</string>
    <string name="sensor_relative_humidity">Relative humidity</string>
    <string name="sensor_ambient_temperature">Ambient temperature</string>
    <string name="game_resume">Resume</string>
    <string name="label_pause">PAUSE</string>
    <string name="label_settings">SETTINGS</string>
    <string name="btn_receive">Receive All</string>
    <string name="btn_pause">Pause Button</string>
    <string name="lbl_controls">Controls</string>
    <string name="lbl_ship_controls">Ship Controls</string>
    <string name="lbl_ammo_controls">Ammunition Controls</string>
    <string name="lbl_shoot_controls">Shoot Controls</string>
    <string name="lbl_advanced_settings">Advanced settings</string>
    <string name="lbl_volume">Volume</string>
    <string name="txt_volume_desc">Adjust volume value</string>
    <string name="lbl_sensor_event">Show Sensors - Events</string>
    <string name="txt_sensor_event_desc">Show device sensors and the related events</string>
    <string name="lbl_wipe_memory">Wipe memory</string>
    <string name="txt_wipe_memory_desc">Delete app memory</string>
    <string name="tb_control_sensor">Sensor Control</string>
    <string name="tb_control_touch">Touch Control</string>
    <string name="lbl_control_mode">Ship Control Mode</string>
    <string-array name="ship_controls">
        <item>Touching the devices\' screen</item>
        <item>Moving the device</item>
    </string-array>
    <string-array name="ammo_controls">
        <item>Touching the selected ammo button</item>
        <item>Using the device\'s volume keys</item>
    </string-array>
    <string-array name="shoot_controls">
        <item>Using your voice</item>
        <item>Touching the devices\' screen upwards</item>
    </string-array>
    <string-array name="control_values">
        <item>true</item>
        <item>false</item>
    </string-array>
    <string-array name="inverse_control_values">
        <item>false</item>
        <item>true</item>
    </string-array>
    <string name="settings_change_ammo_volume">With volume keys</string>
    <string name="settings_change_ammo_touch">By touch</string>
    <string name="settings_change_ammo_mode">Change ammo type mode</string>
    <string name="settings_sensorway">By sensor</string>
    <string name="settings_manual">Manual</string>
    <string name="settings_extra">Extra settings</string>
    <string name="settings_exit_message">Exit through \'Accept\' or \'Cancel\' buttons</string>
    <string name="shop_item_name">Item name</string>
    <string name="shop_item_crew_name">Crew</string>
    <string name="shop_item_crew_desc">Restores 5 health points</string>
    <string name="shop_item_repairman_name">Repairman</string>
    <string name="shop_item_repairman_desc">Restores 15 health points</string>
    <string name="shop_item_ammo_simple_name">Ammo simple</string>
    <string name="shop_item_ammo_simple_desc">Gain 10 simple cannonballs</string>
    <string name="shop_item_ammo_aimed_name">Ammo aimed</string>
    <string name="shop_item_ammo_aimed_desc">Gain 5 auto aimed cannonballs</string>
    <string name="shop_item_ammo_double_name">Ammo double</string>
    <string name="shop_item_ammo_double_desc">Gain 5 double fire cannonballs</string>
    <string name="shop_item_ammo_sweep_name">Ammo sweep</string>
    <string name="shop_item_ammo_sweep_desc">Gain 2 screen sweep cannonballs</string>
    <string name="shop_item_nest_name">Nest</string>
    <string name="shop_item_nest_desc">Increases the effective range by 1.15</string>
    <string name="shop_item_mats_name">Materials</string>
    <string name="shop_item_mats_desc">Increases the max health in 10 units</string>
    <string name="shop_item_mpiece_name">Map Piece</string>
    <string name="shop_item_mpiece_desc">1/6 th section of a map</string>
    <string name="shop_item_map_name">Map</string>
    <string name="shop_item_map_desc">Shows the closest treasure</string>
    <string name="shop_item_bpowder_name">Black Powder</string>
    <string name="shop_item_bpowder_desc">Increases the firepower by 0.5</string>
    <string name="shop_item_valuable_name">Valuable</string>
    <string name="shop_item_valuable_desc">It grants you 100 gold coins</string>
    <string name="shop_purchase_hint">\n
        (Select item help to display its description)\n
        (Select item to purchase it)</string>
    <string name="shop_purchase_dialog_title">Purchase</string>
    <string name="shop_purchase_dialog_message">You will purchase this item!</string>
    <string name="shop_purchase_dialog_positive">Confirm</string>
    <string name="settings_restore_dialog_title">Restore Preferences</string>
    <string name="settings_restore_dialog_message">You will wipe all saved data!</string>
    <string name="settings_restore_dialog_positive">Confirm</string>
    <string name="overwrite_dialog_title">Overwrite Saved Game</string>
    <string name="overwrite_dialog_message">Your previous saved game will be overwritten!</string>
    <string name="overwrite_dialog_positive">Confirm</string>
    <string name="exit_dialog_title">Exit Saved Game</string>
    <string name="exit_dialog_message">Any unsaved progress will be lost!</string>
    <string name="exit_dialog_positive">Exit</string>
    <string name="exit_dialog_negative">Cancel</string>
    <string name="exit_tutorial_dialog_title">Exit Tutorial</string>
    <string name="exit_tutorial_main_menu_message">You will return to the Main Menu</string>
    <string name="exit_tutorial_dialog_message">The game will begin!</string>
    <string name="exit_tutorial_dialog_positive">Proceed</string>
    <string name="exit_shop_dialog_title">Exit Shop</string>
    <string name="exit_shop_dialog_message">The game will resume!</string>
    <string name="exit_shop_dialog_positive">Proceed</string>
    <string name="about_dialog_title">About us</string>
    <string name="about_dialog_message">Game developed by \n
        Miguel Angel Jiménez Rega - UO179050\n
        For his Master\'s Final Work</string>
    <string name="about_dialog_positive" translatable="false">OK</string>
    <string name="title_screen_slide">Screen Slide</string>
    <string name="action_finish">Finish</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="title_template_step">Tutorial: Step <xliff:g id="step_number">%1$d</xliff:g></string>
    <string name="code_sensor_list">Sensor List</string>
    <string name="sensor_list_default" translatable="false">-1;</string>
    <string-array name="loading_messages">
        <item>Loading Seas&#8230;</item>
        <item>Loading Sky&#8230;</item>
        <item>Loading Sounds&#8230;</item>
        <item>Loading UI&#8230;</item>
        <item>Loading Treasures&#8230;</item>
        <item>Loading Ships&#8230;</item>
        <item>Loading Cannons&#8230;</item>
        <item>Loading Pirates&#8230;</item>
        <item>Loading Yarrr&#8230;</item>
        <item>Let\'s sail, mate!</item>
    </string-array>
    <string name="icd_anim_background">Animation background image</string>
    <string name="icd_loading_animation">Loading animation image</string>
    <string name="icd_rest_preferences">Restore preferences</string>
    <string name="icd_help_hud">Game hud image</string>
    <string name="icd_item">Item icon</string>
    <string name="icd_gold">Gold icon</string>
    <string name="icd_btn_settings">Setting\'s button</string>
    <string name="icd_btn_help">Help button</string>
    <string name="icd_tutorial_image">Tutorial background image</string>
    <string name="icd_btn_change_ammo">Change ammo image</string>
    <string name="icd_btn_island">Island image</string>
    <string name="icd_btn_arrow">Arrow image</string>
    <string name="cd_mic_icon">Mic icon</string>
    <string name="cd_event_thumb">Event thumbnail</string>
    <string name="cd_event_image">Event image</string>
    <string name="cd_map_cover">Obscured map cell</string>
    <string name="cd_swipe_arrow_left">Left swipe arrow</string>
    <string name="cd_swipe_arrow_right">Right swipe arrow</string>
    <string name="icd_health">Health icon</string>
    <string name="icd_range">Range icon</string>
    <string name="icd_xp">XP icon</string>
    <string name="icd_power">Power icon</string>
    <string name="icd_map">Map icon</string>
    <string name="max_value" translatable="false">999</string>
    <string name="default_sample_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut 
        gravida, massa nec bibendum maximus, nunc ante viverra enim, sit amet viverra nisi nulla vitae 
        massa. Sed tempor lectus porttitor, dapibus nibh sit amet, viverra nisi. Vivamus ex erat, 
        iaculis ac augue ut, volutpat ornare dolor. Quisque dapibus ante ut laoreet pulvinar. Mauris 
        metus nisi, fermentum a nulla a, condimentum malesuada ligula. Mauris id libero dolor. Sed 
        sagittis ultricies tristique. Morbi efficitur eros in tellus tristique, vitae porta turpis 
        molestie. Cras maximus sollicitudin lectus. Duis sit amet maximus nunc. Curabitur dapibus 
        tristique auctor. Duis sit amet varius odio. Vestibulum eu dui justo. Phasellus tellus tortor, 
        molestie sollicitudin porta ac, maximus vitae orci. Nulla nibh massa, convallis egestas orci 
        quis, efficitur ultricies erat.</string>
    <string name="empty_string" translatable="false" />
    <string name="tutorial_1">Arrr Mate!! Welcome to PIRATE SEAS!!\nYarr want to rule these seas and loot all the booty.</string>
    <string name="tutorial_2">Choose wisely your next step mate! Lot\'s of good ol\'men have sunk in these waters.</string>
    <string name="tutorial_3">When moving to a new zone, you can find an island or more water.</string>
    <string name="gameover_title">Game Over\nYou when to sleep with Davi Jones</string>
    <string name="gameover_score">Score</string>
    <string name="gameover_days">Days passed</string>
    <string name="tutorial_content">This is some tutorial content</string>
    <string name="game_exit">Exit</string>
    <string name="command_ok" translatable="false">OK</string>
    <string name="btn_continue">Continue</string>
    <string name="dummy_text" translatable="false">Dummy text</string>
    <string name="sensor_list_title">Event Sensor List</string>
    <string name="btn_back_main_menu">Back to main menu</string>
</resources>