<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="settings_controls_category"
        android:title="@string/lbl_controls">

        <ListPreference
            android:key="settings_ship_preference"
            android:title="@string/lbl_ship_controls"
            android:dialogTitle="@string/lbl_ship_controls"
            android:entries="@array/ship_controls"
            android:entryValues="@array/control_values"/>

        <ListPreference
            android:key="settings_ammunition_preference"
            android:title="@string/lbl_ammo_controls"
            android:dialogTitle="@string/lbl_ammo_controls"
            android:entries="@array/ammo_controls"
            android:entryValues="@array/control_values"/>

        <ListPreference
            android:key="settings_shoot_preference"
            android:title="@string/lbl_shoot_controls"
            android:dialogTitle="@string/lbl_shoot_controls"
            android:entries="@array/shoot_controls"
            android:entryValues="@array/control_values"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="settings_advanced_category"
        android:title="@string/lbl_advanced_settings">

        <!--
        <android.support.v7.preference.SeekBarPreference
            android:key="settings_volume_preference"
            android:summary="@string/txt_volume_desc"
            android:title="@string/lbl_volume"
            android:defaultValue="0"
            android:max="100" />
        -->

        <Preference
            android:key="settings_sensors_events_preference"
            android:summary="@string/txt_sensor_event_desc"
            android:title="@string/lbl_sensor_event" />

        <Preference
            android:key="settings_wipe_memory_preference"
            android:summary="@string/txt_wipe_memory_desc"
            android:title="@string/lbl_wipe_memory" />

        <EditTextPreference
            android:defaultValue="@string/sensor_list_default"
            android:key="settings_sensor_list_preference"
            android:selectable="false"
            android:enabled="false"
            android:shouldDisableView="true"/>

    </PreferenceCategory>

</PreferenceScreen>