<!DOCTYPE LinearLayout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayoutMainMenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/img_menu_background"
    android:gravity="center">
	
		<TextView 
			android:id="@+id/txtTitleLabel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="@dimen/title_size"
			android:text="@string/game_title"/>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<Button android:id="@+id/btn_newgame"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/activity_new_game"
				android:background="@drawable/xml_btn_style"
                tools:ignore="ButtonStyle" />

			<Button android:id="@+id/btn_tutorial"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/activity_tutorial"
				android:background="@drawable/xml_btn_style"
                tools:ignore="ButtonStyle" />

		</LinearLayout>
			
		<Button android:id="@+id/btn_loadgame"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/activity_load_game"
			android:background="@drawable/xml_btn_style" />
		
		<LinearLayout 
		    android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
			android:orientation="horizontal">
			
		    <ImageButton android:id="@+id/btn_settings"
				android:src="@mipmap/ico_settings"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/activity_settings"
				android:contentDescription="@string/icd_btn_settings"
				android:background="@drawable/xml_btn_style" />
			
			<ImageButton android:id="@+id/btn_help"
				android:src="@mipmap/ico_help"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/activity_help"
				android:contentDescription="@string/icd_btn_help"
				android:background="@drawable/xml_btn_style" />
		    
		</LinearLayout>
			
		<Button android:id="@+id/btn_exit"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/exit_dialog_positive"
			android:background="@drawable/xml_btn_style" />
		
</LinearLayout>