<!DOCTYPE LinearLayout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_size"
    android:orientation="vertical"
    android:background="@drawable/xml_border"
    android:gravity="center">
	
		<TextView 
			android:id="@+id/txtPauseLabel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="@dimen/title_size"
			android:text="@string/label_pause"
			android:paddingBottom="@dimen/small_padding_size"/>

		<Button android:id="@+id/btnPauseResume"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/game_resume"
			android:background="@drawable/xml_btn_style" />
			
		<ImageButton android:id="@+id/btnPauseSettings"
			android:src="@mipmap/ico_settings"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:contentDescription="@string/activity_settings"
			android:text="@string/activity_settings"
			android:background="@drawable/xml_btn_style" />
		
		<ImageButton android:id="@+id/btnPauseHelp"
			android:src="@mipmap/ico_help"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:contentDescription="@string/activity_help"
			android:text="@string/activity_help"
			android:background="@drawable/xml_btn_style" />

		<Button android:id="@+id/btnPauseExit"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/game_exit"
			android:background="@drawable/xml_btn_style" />
		
</LinearLayout>