<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/xml_border"
    android:padding="@dimen/padding_size">

    <TextView
        android:id="@+id/txtEventTitle"
        android:gravity="top|center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dummy_text"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/cd_event_image"
        android:src="@mipmap/img_game_help_hud"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_padding_size"
        android:text="@string/default_sample_text"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/command_ok"
        android:background="@drawable/xml_btn_style"/>

</LinearLayout>