<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE LinearLayout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayoutGameOver"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/img_menu_background" >

    <TextView
        android:id="@+id/lblGameOver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="28dp"
        android:gravity="center"
        android:fontFamily="@font/skullsandcrossbones"
        android:text="@string/gameover_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lblDays"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
            android:fontFamily="@font/skullsandcrossbones"
            android:layout_gravity="center"
            android:layout_margin="18dp"
            android:textColor="@color/popup_stroke"
            android:text="@string/gameover_days" />

        <TextView
            android:id="@+id/txtDays"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
            android:fontFamily="@font/skullsandcrossbones"
            android:layout_gravity="center"
            android:layout_margin="18dp"
            android:textColor="@color/popup_stroke"
            android:text="@string/max_value" />
	</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lblScore"
			android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
            android:fontFamily="@font/skullsandcrossbones"
            android:layout_gravity="center"
            android:layout_margin="18dp"
            android:textColor="@color/popup_stroke"
            android:text="@string/gameover_score" />

        <TextView
            android:id="@+id/txtScore"
			android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
            android:fontFamily="@font/skullsandcrossbones"
            android:layout_gravity="center"
            android:layout_margin="18dp"
            android:textColor="@color/popup_stroke"
            android:text="@string/max_value" />
	</LinearLayout>

    <Button
        android:id="@+id/btn_load_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/skullsandcrossbones"
        android:text="@string/activity_load_game"
        android:background="@drawable/xml_btn_style"/>

    <Button
        android:id="@+id/btn_main_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/skullsandcrossbones"
        android:text="@string/btn_back_main_menu"
        android:background="@drawable/xml_btn_style"/>

</LinearLayout>
