<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE LinearLayout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:baselineAligned="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="horizontal" >

    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_vertical|start"
	    android:orientation="horizontal"
	    android:layout_weight="1" >

		<ImageView
			android:id="@+id/imgHelpIcon"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="@dimen/padding_size"
			android:contentDescription="@string/icd_item"
			android:src="@mipmap/ico_help" />
	    
	    <ImageView
	        android:id="@+id/imgItemIcon"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:contentDescription="@string/icd_item"
	        android:src="@mipmap/ic_launcher" />
		
	    <TextView
	        android:id="@+id/txtItemName"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
			android:fontFamily="@font/skullsandcrossbones"
	        android:text="@string/shop_item_name"
	        android:textAllCaps="true"
	        android:layout_marginStart="8dp"
	        android:layout_marginEnd="48dp" />
	</LinearLayout>

    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_vertical|end"
	    android:orientation="horizontal"
	    android:layout_weight="1" >
	    
	    <TextView
	        android:id="@+id/txtItemPrice"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
			android:fontFamily="@font/skullsandcrossbones"
	        android:text="@string/max_value"
	        android:layout_marginStart="48dp"
	        android:layout_marginEnd="8dp" />
	
	    <ImageView
	        android:id="@+id/imgGoldIcon"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:contentDescription="@string/icd_gold"
	        android:src="@mipmap/ico_gold" />
	</LinearLayout>	    

</LinearLayout>
