<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView android:id="@android:id/text1"
        style="?android:textAppearanceLarge"
        android:textStyle="bold"
        android:background="@drawable/xml_border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/skullsandcrossbones"
        android:padding="@dimen/small_padding_size"
        android:layout_marginBottom="@dimen/small_padding_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgLeftArrow"
            android:layout_width="50dp"
            android:layout_height="250dp"
            android:gravity="start|bottom"
            android:contentDescription="@string/cd_swipe_arrow_left"
            android:src="@drawable/ico_swipe_screen_left" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text2"
                style="?android:textAppearanceMedium"
                android:layout_width="580dp"
                android:layout_height="wrap_content"
                android:background="@drawable/xml_border"
                android:fontFamily="@font/skullsandcrossbones"
                android:lineSpacingMultiplier="1.1"
                android:padding="@dimen/small_padding_size"
                android:text="@string/tutorial_content" />

            <ImageView
                android:id="@+id/imgDisplayed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@mipmap/img_null_background"
                android:contentDescription="@string/icd_tutorial_image"
                android:padding="1dp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imgRightArrow"
            android:layout_width="50dp"
            android:layout_height="250dp"
            android:gravity="end|bottom"
            android:contentDescription="@string/cd_swipe_arrow_right"
            android:src="@drawable/ico_swipe_screen_right" />

    </LinearLayout>
</LinearLayout>