<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayoutSensorsList"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/xml_border"
    android:padding="8dp">

    <TextView
        android:id="@+id/txtSensorListTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center_horizontal"
        android:text="@string/sensor_list_title"/>

    <ListView
        android:id="@+id/lstSensorEventsList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:listitem="@layout/list_item_sensor_event"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/extra_small_padding_size">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btnCancel"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/btn_cancel"
            android:background="@drawable/xml_btn_style"/>

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btnContinue"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/btn_continue"
            android:background="@drawable/xml_btn_style"/>

    </LinearLayout>

</LinearLayout>